# migraine_data_reddit

./: .gitignore  README.md  docker-compose.yml  feature_extraction.ipynb  feature_extraction_effectiveness.ipynb  feature_extraction_name.ipynb  gender_recognition.ipynb  group_11_proposal.ipynb  migraine_forum_data_extraction.ipynb  prototype.ipynb  pushshift.ipynb  pyproject.toml  reddis2db.ipynb
data/: README.md
dbdata/: README.md
project_files/: README.md  create_dataset.excalidraw  date_gathering_workflow.excalidraw  easy_feature_extraction.ipynb  feature_extraction.ipynb  feature_extraction_workflow.excalidraw  patient_info_data_extraction.ipynb  reddis2db.ipynb  reddit_db_2_csv.ipynb  requirements.txt
project_files/data/: migraine_all.csv  migraine_all_group11.csv
