[tool.poetry]
name = "migraine_data_reddit"
version = "0.1.0"
description = ""
authors = ["robjsliwa <robjsliwa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
pandas = "^1.3.3"
selenium = "^3.141.0"
bs4 = "^0.0.1"
pymongo = "^3.12.0"
tqdm = "^4.62.3"
gensim = "^4.1.2"
nltk = "^3.6.4"
spacy = "^3.1.3"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
